@@ -157,43 +157,34 @@ int.check.ncod <- function(X, ploidy, ncod = NULL,
   
   
   #---check ncod and ploidy-----------#
+  split_matrix <- strsplit(X[!is.na(X)], sep)
   if(strict_nchar) {
-  X.sub <- gsub(meta2char(sep), "", X)
-  X.sub <- X.sub[!is.na(X.sub)]
-  n.control <- as.numeric(unique(nchar(X.sub)))
-  ## more than one character length
-  if(length(n.control) != 1) stop("non unique character length found for alleles")
-  
+    n.control <- unique(unlist(lapply(split_matrix, nchar)))
+    if(length(n.control) != 1) stop("non unique character length found for alleles")
   } else {
-  n.control <- unique(unlist(lapply(strsplit(X, sep), length)))
-  ## more than one character length
-  if(length(n.control) != 1) stop("more than one ploidy level found")
+    n.control <- unique(unlist(lapply(split_matrix, length)))
+    if(length(n.control) != 1) stop("more than one ploidy level found (is sep != '' in your data?)")
   }
 
   ## check that ncontrol(mod = ploidy) = 0
   if(n.control %% ploidy != 0) {
     stop(paste0("incongruence found between the number of (non-missing)
-         characters in some cells and the ploidy level",
-                "predicted ploidy = ", n.control)) 
-  }
+         characters in some cells and the ploidy level. ",
+                "Predicted ploidy = ", n.control)) 
+    }
   
   # when ncod is NULL, determine its value using the ploidy and the number
   # of non "sep" characters.
   if(is.null(ncod)) {
-    
     ncod <- n.control / ploidy 
-    
   } else {
-    
     if((n.control / ploidy)  != ncod) {
       stop(paste("all (non <0>) cells must have", "a length of", 
                  paste("(", ncod, ")", sep = ""), "non <sep> characters, but
                  seems to have", paste("(", n.control, ")", sep =  "")))
     }
-    }
-  
+  }
   ncod
-  
   }
 
 
